--- a/WiSARD.ipynb
+++ b/WiSARD.ipynb
@@ -30,14 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
+    "def convert_toBinary(x):\n",
+    "    temp = 1\n",
+    "    sum_ = 0\n",
+    "    for i in x:\n",
+    "        sum_ += i*temp\n",
+    "        temp *= 2\n",
+    "    return sum_\n",
+    "    \n",
     "class WiSARD:\n",
-    "    tuples = []\n",
-    "    mapping = []\n",
+    "    # Mapping associa uma posição da matriz de tuplas com o pixel que ele representa\n",
+    "    \n",
     "    def __init__(self, retina_x, retina_y, tuple_size):\n",
     "        self.retina_x = retina_x\n",
     "        self.retina_y = retina_y\n",
@@ -45,8 +54,11 @@
     "        if( (retina_x*retina_y)%tuple_size !=0 ):\n",
     "            print(\"Invalid tuple size\")\n",
     "        self.M = (retina_x*retina_y)//tuple_size\n",
-    "        \n",
-    "    def random_map(self):\n",
+    "        self.tuples = []\n",
+    "        self.mapping = []\n",
+    "        self.discriminators = {}\n",
+    "\n",
+    "    def random_mapping(self):\n",
     "        self.mapping = []\n",
     "        temp = []\n",
     "        for i in range(0, self.retina_x):\n",
@@ -59,92 +71,94 @@
     "                element = random.choice(temp)\n",
     "                temp.remove(element)\n",
     "                temp_array.append(element)\n",
-    "            self.mapping.append(temp_array)"
+    "            self.mapping.append(temp_array)\n",
+    "    \n",
+    "    def set_mapping(self, mapping):\n",
+    "        self.mapping = mapping\n",
+    "        \n",
+    "    def fit_class(self, name_class,retinas):\n",
+    "        tuple_ = [[0 for x in range(self.tuple_size)] for y in range(self.M)] \n",
+    "        if(name_class not in self.discriminators):\n",
+    "            self.discriminators[name_class] = {}\n",
+    "            for i in range(0, len(tuple_)):\n",
+    "                self.discriminators[name_class][i] = {}\n",
+    "            \n",
+    "        for retina in retinas:\n",
+    "            for i in range(0, len(tuple_)):\n",
+    "                for j in range(0, len(tuple_[i])):\n",
+    "                    pixel = self.mapping[i][j]\n",
+    "                    tuple_[i][j] = retina[pixel[0]][pixel[1]]\n",
+    "                \n",
+    "                pos_ram = convert_toBinary(tuple_[i])\n",
+    "                \n",
+    "                if(pos_ram not in self.discriminators[name_class][i]):\n",
+    "                    self.discriminators[name_class][i][pos_ram] = 0\n",
+    "                \n",
+    "                self.discriminators[name_class][i][pos_ram] += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(6, 4), (11, 1), (12, 1), (14, 2)],\n",
-       " [(8, 4), (10, 1), (8, 6), (4, 9)],\n",
-       " [(13, 12), (7, 14), (11, 7), (10, 7)],\n",
-       " [(10, 4), (9, 5), (8, 8), (2, 3)],\n",
-       " [(3, 13), (8, 9), (8, 10), (7, 11)],\n",
-       " [(14, 1), (15, 0), (5, 12), (0, 0)],\n",
-       " [(11, 15), (8, 13), (14, 5), (15, 12)],\n",
-       " [(6, 13), (0, 13), (9, 4), (1, 0)],\n",
-       " [(15, 8), (7, 9), (3, 12), (2, 11)],\n",
-       " [(13, 0), (13, 5), (0, 4), (4, 3)],\n",
-       " [(1, 8), (4, 4), (5, 3), (1, 3)],\n",
-       " [(15, 10), (0, 14), (5, 7), (14, 7)],\n",
-       " [(14, 0), (13, 9), (5, 6), (10, 5)],\n",
-       " [(6, 8), (15, 14), (11, 2), (14, 4)],\n",
-       " [(5, 2), (14, 15), (3, 9), (9, 10)],\n",
-       " [(13, 3), (2, 13), (3, 11), (3, 14)],\n",
-       " [(1, 13), (7, 7), (5, 4), (14, 3)],\n",
-       " [(2, 9), (14, 10), (1, 12), (13, 11)],\n",
-       " [(3, 2), (3, 3), (9, 11), (1, 4)],\n",
-       " [(2, 10), (12, 8), (2, 2), (6, 15)],\n",
-       " [(2, 1), (11, 10), (4, 13), (9, 7)],\n",
-       " [(4, 7), (6, 1), (7, 2), (14, 6)],\n",
-       " [(7, 0), (0, 12), (12, 14), (6, 0)],\n",
-       " [(2, 8), (13, 6), (5, 11), (11, 13)],\n",
-       " [(7, 15), (9, 13), (0, 3), (12, 6)],\n",
-       " [(2, 0), (13, 4), (13, 10), (1, 2)],\n",
-       " [(14, 11), (5, 8), (8, 5), (2, 7)],\n",
-       " [(12, 2), (15, 6), (1, 7), (12, 5)],\n",
-       " [(7, 3), (11, 4), (14, 12), (8, 15)],\n",
-       " [(14, 13), (12, 12), (0, 1), (0, 8)],\n",
-       " [(9, 14), (14, 14), (15, 2), (9, 9)],\n",
-       " [(6, 10), (2, 14), (7, 13), (10, 10)],\n",
-       " [(10, 12), (10, 14), (7, 5), (8, 0)],\n",
-       " [(0, 2), (13, 15), (5, 15), (1, 15)],\n",
-       " [(3, 5), (10, 6), (11, 11), (15, 15)],\n",
-       " [(13, 14), (12, 10), (7, 1), (1, 10)],\n",
-       " [(1, 9), (13, 8), (2, 4), (11, 6)],\n",
-       " [(6, 11), (15, 3), (1, 14), (15, 4)],\n",
-       " [(8, 2), (2, 12), (7, 8), (5, 1)],\n",
-       " [(6, 2), (4, 0), (11, 3), (8, 12)],\n",
-       " [(6, 12), (10, 13), (15, 11), (12, 13)],\n",
-       " [(1, 1), (13, 2), (3, 4), (1, 6)],\n",
-       " [(12, 0), (3, 0), (9, 12), (8, 3)],\n",
-       " [(0, 15), (6, 7), (15, 7), (5, 14)],\n",
-       " [(5, 0), (6, 6), (4, 6), (8, 1)],\n",
-       " [(2, 6), (4, 10), (4, 12), (1, 5)],\n",
-       " [(11, 14), (9, 3), (9, 1), (7, 4)],\n",
-       " [(4, 1), (14, 8), (12, 15), (12, 9)],\n",
-       " [(13, 7), (2, 5), (11, 5), (10, 0)],\n",
-       " [(10, 11), (12, 4), (4, 14), (10, 15)],\n",
-       " [(6, 3), (15, 9), (11, 12), (0, 9)],\n",
-       " [(4, 5), (5, 10), (0, 5), (9, 0)],\n",
-       " [(10, 8), (13, 1), (3, 10), (6, 14)],\n",
-       " [(12, 11), (1, 11), (13, 13), (12, 3)],\n",
-       " [(10, 2), (3, 1), (3, 15), (14, 9)],\n",
-       " [(4, 8), (10, 9), (4, 11), (3, 6)],\n",
-       " [(6, 9), (0, 11), (11, 9), (0, 7)],\n",
-       " [(5, 13), (6, 5), (9, 2), (9, 6)],\n",
-       " [(0, 10), (11, 0), (8, 11), (15, 13)],\n",
-       " [(11, 8), (9, 8), (7, 6), (15, 5)],\n",
-       " [(2, 15), (5, 9), (8, 7), (4, 15)],\n",
-       " [(3, 7), (9, 15), (7, 12), (5, 5)],\n",
-       " [(4, 2), (12, 7), (8, 14), (7, 10)],\n",
-       " [(0, 6), (3, 8), (15, 1), (10, 3)]]"
+       "[[(2, 0), (2, 1)],\n",
+       " [(1, 0), (1, 2)],\n",
+       " [(2, 2), (3, 0)],\n",
+       " [(0, 1), (3, 1)],\n",
+       " [(0, 0), (3, 3)],\n",
+       " [(1, 1), (0, 3)],\n",
+       " [(0, 2), (3, 2)],\n",
+       " [(2, 3), (1, 3)]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = WiSARD(16, 16, 4)\n",
-    "test.random_map()\n",
+    "test = WiSARD(4, 4, 2)\n",
+    "test.random_mapping()\n",
     "test.mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'i': {0: {0: 1},\n",
+       "  1: {0: 1},\n",
+       "  2: {0: 1},\n",
+       "  3: {0: 1},\n",
+       "  4: {2: 1},\n",
+       "  5: {2: 1},\n",
+       "  6: {0: 1},\n",
+       "  7: {3: 1}}}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retinas = [\n",
+    "    [[0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1]]\n",
+    "]\n",
+    "\n",
+    "test.fit_class(\"i\", retinas)\n",
+    "test.discriminators"
    ]
   }
  ],
