--- a/WiSARD.ipynb
+++ b/WiSARD.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "        self.tuples = []\n",
     "        self.mapping = []\n",
     "        self.discriminators = {}\n",
+    "        self.max_bleaching = 0\n",
     "\n",
     "    def random_mapping(self):\n",
     "        self.mapping = []\n",
@@ -94,28 +95,51 @@
     "                if(pos_ram not in self.discriminators[name_class][i]):\n",
     "                    self.discriminators[name_class][i][pos_ram] = 0\n",
     "                \n",
-    "                self.discriminators[name_class][i][pos_ram] += 1\n"
+    "                self.discriminators[name_class][i][pos_ram] += 1\n",
+    "                self.max_bleaching = max(self.max_bleaching, self.discriminators[name_class][i][pos_ram])\n",
+    "                \n",
+    "    # necessário pelo menos duas classes para que possa classificar\n",
+    "    def classify(self, retina):\n",
+    "        tuple_ = [[0 for x in range(self.tuple_size)] for y in range(self.M)] \n",
+    "\n",
+    "        for bleaching in range(1, self.max_bleaching+1):\n",
+    "            results = []\n",
+    "            for classes in self.discriminators:\n",
+    "                R = 0\n",
+    "                for i in range(0, len(tuple_)):\n",
+    "                    for j in range(0, len(tuple_[i])):\n",
+    "                        pixel = self.mapping[i][j]\n",
+    "                        tuple_[i][j] = retina[pixel[0]][pixel[1]]\n",
+    "\n",
+    "                    pos_ram = convert_toBinary(tuple_[i])\n",
+    "\n",
+    "                    if( (pos_ram in self.discriminators[classes][i]) and (self.discriminators[classes][i][pos_ram] >= bleaching) ):\n",
+    "                        R+=1\n",
+    "                results.append((R, classes))\n",
+    "            results.sort()\n",
+    "            if( (results[-1][0] > results[-2][0]) or (bleaching == self.max_bleaching) ):\n",
+    "                return results[-1][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(2, 0), (2, 1)],\n",
-       " [(1, 0), (1, 2)],\n",
-       " [(2, 2), (3, 0)],\n",
-       " [(0, 1), (3, 1)],\n",
-       " [(0, 0), (3, 3)],\n",
-       " [(1, 1), (0, 3)],\n",
-       " [(0, 2), (3, 2)],\n",
-       " [(2, 3), (1, 3)]]"
+       "[[(0, 0), (1, 2)],\n",
+       " [(3, 2), (0, 1)],\n",
+       " [(2, 0), (1, 3)],\n",
+       " [(1, 1), (3, 1)],\n",
+       " [(0, 2), (3, 3)],\n",
+       " [(2, 1), (2, 3)],\n",
+       " [(1, 0), (2, 2)],\n",
+       " [(3, 0), (0, 3)]]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,37 +152,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'i': {0: {0: 1},\n",
-       "  1: {0: 1},\n",
-       "  2: {0: 1},\n",
-       "  3: {0: 1},\n",
-       "  4: {2: 1},\n",
-       "  5: {2: 1},\n",
-       "  6: {0: 1},\n",
-       "  7: {3: 1}}}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "retinas = [\n",
     "    [[0, 0, 0, 1],\n",
     "     [0, 0, 0, 1],\n",
     "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1]],\n",
+    "\n",
+    "    [[0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1]],\n",
+    "\n",
+    "    [[0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
+    "     [0, 0, 0, 1],\n",
     "     [0, 0, 0, 1]]\n",
+    "\n",
     "]\n",
     "\n",
     "test.fit_class(\"i\", retinas)\n",
-    "test.discriminators"
+    "\n",
+    "retinas = [\n",
+    "    [[0, 1, 0, 1],\n",
+    "     [0, 1, 1, 1],\n",
+    "     [0, 1, 0, 1],\n",
+    "     [0, 1, 0, 1]],\n",
+    "\n",
+    "    [[1, 0, 1, 0],\n",
+    "     [1, 0, 1, 0],\n",
+    "     [1, 1, 1, 0],\n",
+    "     [1, 0, 1, 0]],\n",
+    "\n",
+    "    [[1, 0, 1, 0],\n",
+    "     [1, 1, 1, 0],\n",
+    "     [1, 0, 1, 0],\n",
+    "     [1, 0, 1, 0]]\n",
+    "\n",
+    "]\n",
+    "\n",
+    "test.fit_class(\"H\", retinas)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.classify(\n",
+    "   [[1, 0, 1, 0],\n",
+    "    [1, 1, 1, 0],\n",
+    "    [1, 1, 1, 0],\n",
+    "    [1, 0, 1, 0]]\n",
+    ")\n"
    ]
   }
  ],
