Classe separada em um módulo

--- a/WiSARD.ipynb
+++ b/WiSARD.ipynb
@@ -30,130 +30,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
-    "def convert_toBinary(x):\n",
-    "    temp = 1\n",
-    "    sum_ = 0\n",
-    "    for i in x:\n",
-    "        sum_ += i*temp\n",
-    "        temp *= 2\n",
-    "    return sum_\n",
-    "    \n",
-    "class WiSARD:\n",
-    "    # Mapping associa uma posição da matriz de tuplas com o pixel que ele representa\n",
-    "    \n",
-    "    def __init__(self, retina_x, retina_y, tuple_size):\n",
-    "        self.retina_x = retina_x\n",
-    "        self.retina_y = retina_y\n",
-    "        self.tuple_size = tuple_size\n",
-    "        if( (retina_x*retina_y)%tuple_size !=0 ):\n",
-    "            print(\"Invalid tuple size\")\n",
-    "        self.M = (retina_x*retina_y)//tuple_size\n",
-    "        self.tuples = []\n",
-    "        self.mapping = []\n",
-    "        self.discriminators = {}\n",
-    "        self.max_bleaching = 0\n",
-    "\n",
-    "    def random_mapping(self):\n",
-    "        self.mapping = []\n",
-    "        temp = []\n",
-    "        for i in range(0, self.retina_x):\n",
-    "            for j in range(0, self.retina_y):\n",
-    "                temp.append((i, j))\n",
-    "                \n",
-    "        for i in range(0, self.M):\n",
-    "            temp_array = []\n",
-    "            for j in range(0, self.tuple_size):\n",
-    "                element = random.choice(temp)\n",
-    "                temp.remove(element)\n",
-    "                temp_array.append(element)\n",
-    "            self.mapping.append(temp_array)\n",
-    "    \n",
-    "    def set_mapping(self, mapping):\n",
-    "        self.mapping = mapping\n",
-    "        \n",
-    "    def fit_class(self, name_class,retinas):\n",
-    "        tuple_ = [[0 for x in range(self.tuple_size)] for y in range(self.M)] \n",
-    "        if(name_class not in self.discriminators):\n",
-    "            self.discriminators[name_class] = {}\n",
-    "            for i in range(0, len(tuple_)):\n",
-    "                self.discriminators[name_class][i] = {}\n",
-    "            \n",
-    "        for retina in retinas:\n",
-    "            for i in range(0, len(tuple_)):\n",
-    "                for j in range(0, len(tuple_[i])):\n",
-    "                    pixel = self.mapping[i][j]\n",
-    "                    tuple_[i][j] = retina[pixel[0]][pixel[1]]\n",
-    "                \n",
-    "                pos_ram = convert_toBinary(tuple_[i])\n",
-    "                \n",
-    "                if(pos_ram not in self.discriminators[name_class][i]):\n",
-    "                    self.discriminators[name_class][i][pos_ram] = 0\n",
-    "                \n",
-    "                self.discriminators[name_class][i][pos_ram] += 1\n",
-    "                self.max_bleaching = max(self.max_bleaching, self.discriminators[name_class][i][pos_ram])\n",
-    "                \n",
-    "    # necessário pelo menos duas classes para que possa classificar\n",
-    "    def classify(self, retina):\n",
-    "        tuple_ = [[0 for x in range(self.tuple_size)] for y in range(self.M)] \n",
-    "\n",
-    "        for bleaching in range(1, self.max_bleaching+1):\n",
-    "            results = []\n",
-    "            for classes in self.discriminators:\n",
-    "                R = 0\n",
-    "                for i in range(0, len(tuple_)):\n",
-    "                    for j in range(0, len(tuple_[i])):\n",
-    "                        pixel = self.mapping[i][j]\n",
-    "                        tuple_[i][j] = retina[pixel[0]][pixel[1]]\n",
-    "\n",
-    "                    pos_ram = convert_toBinary(tuple_[i])\n",
-    "\n",
-    "                    if( (pos_ram in self.discriminators[classes][i]) and (self.discriminators[classes][i][pos_ram] >= bleaching) ):\n",
-    "                        R+=1\n",
-    "                results.append((R, classes))\n",
-    "            results.sort()\n",
-    "            if( (results[-1][0] > results[-2][0]) or (bleaching == self.max_bleaching) ):\n",
-    "                return results[-1][1]"
+    "import WiSARD as Wi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(0, 0), (1, 2)],\n",
-       " [(3, 2), (0, 1)],\n",
-       " [(2, 0), (1, 3)],\n",
-       " [(1, 1), (3, 1)],\n",
-       " [(0, 2), (3, 3)],\n",
-       " [(2, 1), (2, 3)],\n",
-       " [(1, 0), (2, 2)],\n",
-       " [(3, 0), (0, 3)]]"
+       "[[(0, 2), (3, 3)],\n",
+       " [(1, 1), (1, 3)],\n",
+       " [(3, 2), (2, 3)],\n",
+       " [(1, 0), (0, 0)],\n",
+       " [(2, 0), (2, 1)],\n",
+       " [(0, 3), (1, 2)],\n",
+       " [(3, 0), (0, 1)],\n",
+       " [(2, 2), (3, 1)]]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = WiSARD(4, 4, 2)\n",
+    "test = Wi.WiSARD(4, 4, 2)\n",
     "test.random_mapping()\n",
     "test.mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "retinas = [\n",
@@ -200,31 +118,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'i'"
+       "('i', 0.625)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test.classify(\n",
-    "   [[1, 0, 1, 0],\n",
-    "    [1, 1, 1, 0],\n",
-    "    [1, 1, 1, 0],\n",
-    "    [1, 0, 1, 0]]\n",
+    "   [[0, 0, 0, 1],\n",
+    "    [0, 0, 0, 1],\n",
+    "    [0, 0, 0, 1],\n",
+    "    [0, 0, 0, 1]]\n",
     ")\n"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda env:PDSH]",
    "language": "python",
