--- a/WiSARD.ipynb
+++ b/WiSARD.ipynb
@@ -41,27 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[(3, 2), (0, 2)],\n",
-       " [(0, 0), (1, 1)],\n",
-       " [(0, 3), (1, 3)],\n",
-       " [(3, 3), (2, 2)],\n",
-       " [(3, 1), (2, 0)],\n",
-       " [(2, 1), (1, 0)],\n",
-       " [(3, 0), (1, 2)],\n",
-       " [(0, 1), (2, 3)]]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = Wi.WiSARD(4, 4, 2)\n",
     "test.random_mapping()\n",
@@ -70,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -120,20 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('i', 0.625)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test.classify(\n",
     "   [[0, 0, 0, 1],\n",
@@ -145,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAEICAYAAACQ6CLfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEJBJREFUeJzt3XuMlXV+x/H3Z1FjRRRZWySIy2INBq1lE8SNIavGsl6i\nUdSaJTWl0co2EesmW7KGphHbYs16aZdoNrD1ArpVN6tGpGa9obJdU+qIqIj1UqMROoIujly8wnz7\nx3lmO+Kc35k5t+fM/D6v5GTOPN/nOc+XEz7zXM/5KSIws/x8rewGzKwcDr9Zphx+s0w5/GaZcvjN\nMuXwm2XK4c+EpKcl/WWzl5W0SNK/NtadlcHhH2YkvS3pT8ruo09EXBcRQ/6jUvxB+VTSruLxWiv6\ns+ocfivTgog4uHhMLbuZ3Dj8I4SkwyStlvS+pA+L50fuM9vRkv5L0g5JD0ka12/5b0t6VlKPpBcl\nnTrI9S6WdHfx/EBJd0v6bfE6z0ka37x/pTWTwz9yfA24A/gGcBTwCXDLPvP8OXApMAHYAywFkDQR\n+HfgH4FxwN8A90v6/SH2MA84FJgEfB34q6KPav5J0geSfjPYPzbWPA7/CBERv42I+yPi44jYCSwB\nTtlntrsiYmNE7Ab+DrhY0ijgEuCRiHgkInoj4nGgCzh7iG18QSX0fxgReyPi+YjYUWXeHwFTgInA\ncuBhSUcPcX3WAId/hJB0kKRlkt6RtANYC4wtwt3n3X7P3wH2Bw6nsrfwp8Wueo+kHmAWlT2EobgL\neBS4V9L/SvqxpP0HmjEi1kXEzoj4LCJWAL9h6H9srAEO/8jxQ2AqcFJEHAJ8p5iufvNM6vf8KCpb\n6g+o/FG4KyLG9nuMjojrh9JARHwREddGxDTgZOAcKocag1p8n16txRz+4Wn/4uRa32M/YAyV4+ue\n4kTeNQMsd4mkaZIOAv4e+GVE7AXuBs6VdIakUcVrnjrACcMkSadJ+qNib2MHlT8uvQPMN7ZY14GS\n9pP0Z1T+WP1qKOuzxjj8w9MjVILe91gM/Avwe1S25P/JwEG6C7gTeA84EPhrgIh4FzgPWAS8T2VP\nYCFD//9xBPBLKsF/FXimWOe+9qdycvH9ot8rgfMj4vUhrs8aIH+Zh1mevOU3y5TDb5Yph98sUw6/\nWab2a+fKJPnsolmLRcSg7pdoaMsv6UxJr0l6U9LVjbyWmbVX3Zf6ihs5XgdmA5uB54C5EbEpsYy3\n/GYt1o4t/0zgzYh4KyI+B+6lcqOImQ0DjYR/Il/+oMjmYtqXSJovqUtSVwPrMrMma/kJv4hYTuUj\nm97tN+sgjWz5t/DlT4kdWUwzs2GgkfA/Bxwj6ZuSDgC+B6xqTltm1mp17/ZHxB5JC6h8ecMo4PaI\neKVpnZlZS7X1U30+5jdrvbbc5GNmw5fDb5Yph98sUw6/WaYcfrNMOfxmmXL4zTLl8JtlyuE3y5TD\nb5Yph98sUw6/WaYcfrNMOfxmmXL4zTLl8JtlyuE3y5TDb5Yph98sUw6/WaYcfrNMOfxmmXL4zTLl\n8JtlyuE3y5TDb5Yph98sUw6/WaYcfrNM1T1Etw0Po0aNStYPPfTQlq5/wYIFVWsHHXRQctmpU6cm\n61dccUWyfuONN1atzZ07N7nsp59+mqxff/31yfq1116brHeChsIv6W1gJ7AX2BMRM5rRlJm1XjO2\n/KdFxAdNeB0zayMf85tlqtHwB/CEpOclzR9oBknzJXVJ6mpwXWbWRI3u9s+KiC2S/gB4XNJ/R8Ta\n/jNExHJgOYCkaHB9ZtYkDW35I2JL8XMb8CAwsxlNmVnr1R1+SaMljel7DnwX2NisxsystRrZ7R8P\nPCip73X+LSJ+1ZSuRpijjjoqWT/ggAOS9ZNPPjlZnzVrVtXa2LFjk8teeOGFyXqZNm/enKwvXbo0\nWZ8zZ07V2s6dO5PLvvjii8n6M888k6wPB3WHPyLeAv64ib2YWRv5Up9Zphx+s0w5/GaZcvjNMuXw\nm2VKEe276W6k3uE3ffr0ZH3NmjXJeqs/Vtupent7k/VLL700Wd+1a1fd6+7u7k7WP/zww2T9tdde\nq3vdrRYRGsx83vKbZcrhN8uUw2+WKYffLFMOv1mmHH6zTDn8Zpnydf4mGDduXLK+bt26ZH3KlCnN\nbKepavXe09OTrJ922mlVa59//nly2Vzvf2iUr/ObWZLDb5Yph98sUw6/WaYcfrNMOfxmmXL4zTLl\nIbqbYPv27cn6woULk/VzzjknWX/hhReS9VpfYZ2yYcOGZH327NnJ+u7du5P14447rmrtqquuSi5r\nreUtv1mmHH6zTDn8Zply+M0y5fCbZcrhN8uUw2+WKX+evwMccsghyXqt4aSXLVtWtXbZZZcll73k\nkkuS9XvuuSdZt87TtM/zS7pd0jZJG/tNGyfpcUlvFD8Pa6RZM2u/wez23wmcuc+0q4EnI+IY4Mni\ndzMbRmqGPyLWAvvev3oesKJ4vgI4v8l9mVmL1Xtv//iI6Bvs7D1gfLUZJc0H5te5HjNrkYY/2BMR\nkTqRFxHLgeXgE35mnaTeS31bJU0AKH5ua15LZtYO9YZ/FTCveD4PeKg57ZhZu9Tc7Zd0D3AqcLik\nzcA1wPXALyRdBrwDXNzKJke6HTt2NLT8Rx99VPeyl19+ebJ+3333Jeu9vb11r9vKVTP8ETG3Sun0\nJvdiZm3k23vNMuXwm2XK4TfLlMNvlimH3yxT/kjvCDB69OiqtYcffji57CmnnJKsn3XWWcn6Y489\nlqxb+3mIbjNLcvjNMuXwm2XK4TfLlMNvlimH3yxTDr9Zpnydf4Q7+uijk/X169cn6z09Pcn6U089\nlax3dXVVrd16663JZdv5f3Mk8XV+M0ty+M0y5fCbZcrhN8uUw2+WKYffLFMOv1mmfJ0/c3PmzEnW\n77jjjmR9zJgxda970aJFyfrKlSuT9e7u7mQ9V77Ob2ZJDr9Zphx+s0w5/GaZcvjNMuXwm2XK4TfL\nlK/zW9Lxxx+frN98883J+umn1z+Y87Jly5L1JUuWJOtbtmype93DWdOu80u6XdI2SRv7TVssaYuk\nDcXj7EaaNbP2G8xu/53AmQNM/+eImF48HmluW2bWajXDHxFrge1t6MXM2qiRE35XSnqpOCw4rNpM\nkuZL6pJU/cvczKzt6g3/T4EpwHSgG7ip2owRsTwiZkTEjDrXZWYtUFf4I2JrROyNiF7gZ8DM5rZl\nZq1WV/glTej36xxgY7V5zawz1bzOL+ke4FTgcGArcE3x+3QggLeB70dEzQ9X+zr/yDN27Nhk/dxz\nz61aq/VdAVL6cvWaNWuS9dmzZyfrI9Vgr/PvN4gXmjvA5NuG3JGZdRTf3muWKYffLFMOv1mmHH6z\nTDn8ZpnyR3qtNJ999lmyvt9+6YtRe/bsSdbPOOOMqrWnn346uexw5q/uNrMkh98sUw6/WaYcfrNM\nOfxmmXL4zTLl8Jtlquan+ixvJ5xwQrJ+0UUXJesnnnhi1Vqt6/i1bNq0KVlfu3ZtQ68/0nnLb5Yp\nh98sUw6/WaYcfrNMOfxmmXL4zTLl8Jtlytf5R7ipU6cm6wsWLEjWL7jggmT9iCOOGHJPg7V3795k\nvbs7/W3xvb29zWxnxPGW3yxTDr9Zphx+s0w5/GaZcvjNMuXwm2XK4TfLVM3r/JImASuB8VSG5F4e\nET+RNA64D5hMZZjuiyPiw9a1mq9a19Lnzh1oIOWKWtfxJ0+eXE9LTdHV1ZWsL1myJFlftWpVM9vJ\nzmC2/HuAH0bENODbwBWSpgFXA09GxDHAk8XvZjZM1Ax/RHRHxPri+U7gVWAicB6wophtBXB+q5o0\ns+Yb0jG/pMnAt4B1wPiI6Lu/8j0qhwVmNkwM+t5+SQcD9wM/iIgd0v8PBxYRUW0cPknzgfmNNmpm\nzTWoLb+k/akE/+cR8UAxeaukCUV9ArBtoGUjYnlEzIiIGc1o2Myao2b4VdnE3wa8GhE39yutAuYV\nz+cBDzW/PTNrlZpDdEuaBfwaeBno+4zkIirH/b8AjgLeoXKpb3uN18pyiO7x49OnQ6ZNm5as33LL\nLcn6scceO+SemmXdunXJ+g033FC19tBD6e2FP5Jbn8EO0V3zmD8i/gOo9mKnD6UpM+scvsPPLFMO\nv1mmHH6zTDn8Zply+M0y5fCbZcpf3T1I48aNq1pbtmxZctnp06cn61OmTKmrp2Z49tlnk/Wbbrop\nWX/00UeT9U8++WTIPVl7eMtvlimH3yxTDr9Zphx+s0w5/GaZcvjNMuXwm2Uqm+v8J510UrK+cOHC\nZH3mzJlVaxMnTqyrp2b5+OOPq9aWLl2aXPa6665L1nfv3l1XT9b5vOU3y5TDb5Yph98sUw6/WaYc\nfrNMOfxmmXL4zTKVzXX+OXPmNFRvxKZNm5L11atXJ+t79uxJ1lOfue/p6Ukua/nylt8sUw6/WaYc\nfrNMOfxmmXL4zTLl8JtlyuE3y5QiIj2DNAlYCYwHAlgeET+RtBi4HHi/mHVRRDxS47XSKzOzhkWE\nBjPfYMI/AZgQEesljQGeB84HLgZ2RcSNg23K4TdrvcGGv+YdfhHRDXQXz3dKehUo96trzKxhQzrm\nlzQZ+Bawrph0paSXJN0u6bAqy8yX1CWpq6FOzaypau72/25G6WDgGWBJRDwgaTzwAZXzAP9A5dDg\n0hqv4d1+sxZr2jE/gKT9gdXAoxFx8wD1ycDqiDi+xus4/GYtNtjw19ztlyTgNuDV/sEvTgT2mQNs\nHGqTZlaewZztnwX8GngZ6C0mLwLmAtOp7Pa/DXy/ODmYei1v+c1arKm7/c3i8Ju1XtN2+81sZHL4\nzTLl8JtlyuE3y5TDb5Yph98sUw6/WaYcfrNMOfxmmXL4zTLl8JtlyuE3y5TDb5Yph98sU+0eovsD\n4J1+vx9eTOtEndpbp/YF7q1ezeztG4Odsa2f5//KyqWuiJhRWgMJndpbp/YF7q1eZfXm3X6zTDn8\nZpkqO/zLS15/Sqf21ql9gXurVym9lXrMb2blKXvLb2YlcfjNMlVK+CWdKek1SW9KurqMHqqR9Lak\nlyVtKHt8wWIMxG2SNvabNk7S45LeKH4OOEZiSb0tlrSleO82SDq7pN4mSXpK0iZJr0i6qphe6nuX\n6KuU963tx/ySRgGvA7OBzcBzwNyI2NTWRqqQ9DYwIyJKvyFE0neAXcDKvqHQJP0Y2B4R1xd/OA+L\niB91SG+LGeKw7S3qrdqw8n9Bie9dM4e7b4YytvwzgTcj4q2I+By4FzivhD46XkSsBbbvM/k8YEXx\nfAWV/zxtV6W3jhAR3RGxvni+E+gbVr7U9y7RVynKCP9E4N1+v2+mxDdgAAE8Iel5SfPLbmYA4/sN\ni/YeML7MZgZQc9j2dtpnWPmOee/qGe6+2XzC76tmRcR04CzgimL3tiNF5Zitk67V/hSYQmUMx27g\npjKbKYaVvx/4QUTs6F8r870boK9S3rcywr8FmNTv9yOLaR0hIrYUP7cBD1I5TOkkW/tGSC5+biu5\nn9+JiK0RsTcieoGfUeJ7Vwwrfz/w84h4oJhc+ns3UF9lvW9lhP854BhJ35R0APA9YFUJfXyFpNHF\niRgkjQa+S+cNPb4KmFc8nwc8VGIvX9Ipw7ZXG1aekt+7jhvuPiLa/gDOpnLG/3+Avy2jhyp9TQFe\nLB6vlN0bcA+V3cAvqJwbuQz4OvAk8AbwBDCug3q7i8pQ7i9RCdqEknqbRWWX/iVgQ/E4u+z3LtFX\nKe+bb+81y5RP+JllyuE3y5TDb5Yph98sUw6/WaYcfrNMOfxmmfo/RopnSLWc0jAAAAAASUVORK5C\nYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f9ac1b19518>"
+       "<matplotlib.figure.Figure at 0x7f23686364e0>"
       ]
      },
      "metadata": {},
@@ -193,37 +164,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utilities\n",
-    "\n",
-    "mnist_wisard = Wi.WiSARD(28, 28, 2)\n",
-    "mnist_wisard.random_mapping()\n",
-    "\n",
-    "k = 1\n",
-    "for i in range(0, 1000): \n",
-    "    mnist_wisard.fit_class( y_train[i], [utilities.filter_image(x_train[i], k)] )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultado obtido:  (5, 0.00425531914893617)\n",
-      "Resultado esperado:  6\n"
+      "10000\n"
      ]
     }
    ],
    "source": [
-    "print(\"Resultado obtido: \" , mnist_wisard.classify(x_test[130]))\n",
-    "print(\"Resultado esperado: \", y_test[130])"
+    "import utilities\n",
+    "\n",
+    "#mnist_wisard = Wi.WiSARD(28, 28, 28)\n",
+    "#mnist_wisard.random_mapping()\n",
+    "train_set = []\n",
+    "for i in range(len(y_train)):\n",
+    "    train_set.append((y_train[i],x_train[i]))\n",
+    "\n",
+    "test_set = []\n",
+    "for i in range(len(y_test)):\n",
+    "    test_set.append((y_test[i],x_test[i]))\n",
+    "\n",
+    "#k = 40\n",
+    "#for i in range(0, 1000): \n",
+    "#    mnist_wisard.fit_class( y_train[i], [utilities.filter_image(x_train[i], k)] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8588"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#print(\"Resultado obtido: \" , mnist_wisard.classify(utilities.filter_image(x_test[411], k)))\n",
+    "#print(\"Resultado esperado: \", y_test[411])\n",
+    "utilities.eval(Wi.WiSARD(28, 28, 28),train_set, 1000, test_set, 40, 1 )"
    ]
   }
  ],
